# ORBIT

./: .gitattributes  .gitignore  .gitlab-ci.yml  AI-Portal-Platform-Whitepaper-Draft-v3.md  README.md  gap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  phase_task.md
docs/: ARCHITECTURE.md  COMPLIANCE.md  RUNBOOK.md  openfga-model.yaml  vault-secret-paths.md
docs/diagrams/: 01-AI-Portal-Big-Picture.drawio  02-AI-Portal-Lifecycle-Flow.drawio
docs/runbooks/: argocd.md  eventstore.md  kafka.md  keycloak.md  kong.md  minio.md  observability.md  postgres.md  redis.md  vault.md
gitops/: project.yaml  root-app.yaml
gitops/apps/: infra-appset.yaml  services-appset.yaml
implementation-plan/: CHANGELOG.md  CONTRIBUTING.md
implementation-plan/00-overview/: glossary.md  technology-stack.md
infra/eventstore/: values.yaml
infra/k3s/: 00-namespaces.yaml  README.md  hpa.yaml  network-policies.yaml
infra/k8s/: harbor-pull-secret.yaml  hpa-pdb.yaml  network-policies.yaml  openfga.yaml
infra/kafka/: kafka-cluster.yaml  operator-values.yaml
infra/litellm/: deployment.yaml  values.yaml
infra/observability/: loki-values.yaml  otel-collector-values.yaml  prometheus-grafana-values.yaml  tempo-values.yaml
infra/sovereign-ai/: llama-deployment.yaml
infra/temporal/: namespace.yaml  values.yaml
infra/vault/: policies.yaml
plan/: README.md
plan/00-overview/: project-charter.md  risk-register.md  success-metrics.md  team-structure.md  technology-stack.md
scripts/: create-harbor-secrets.sh  deploy-k3s.sh  k3s-get-kubeconfig.sh  openfga-seed.sh  smoke-test.sh  vault-bootstrap-k3s.sh  vault-bootstrap.sh
shared/instructions/: api-design-guidelines.md  ci-cd-standards.md  coding-standards-csharp.md  coding-standards-typescript.md  database-design-patterns.md  framework-lifecycle-policy.md  mpay-coding-standards.md  mpay-pci-dss-requirements.md  security-requirements.md  testing-strategy.md
shared/specs/: architecture-proposal.schema.json  domain-entity.schema.json  ledger-event.schema.json  openapi-stub.yaml  project.schema.json  service.schema.json  vulnerability-finding.schema.json  work-package.schema.json
src/architecture-agent/: Dockerfile  pyproject.toml
src/ba-agent/: pyproject.toml
src/backend-specialist-agent/: pyproject.toml
src/capability-fabric/: Dockerfile  pyproject.toml
src/capability-fabric/app/: auth.py  config.py  db.py  main.py  models.py  repository.py  router.py
src/capability-fabric/k8s/: deployment.yaml
src/capability-fabric/scripts/: seed_skills.py
src/capability-fabric/skills/: api_design.yaml  ci_pipeline_generation.yaml  code_review.yaml  database_schema_design.yaml  documentation_generation.yaml  fleet_upgrade_plan.yaml  iac_generation.yaml  pipeline_orchestration.yaml  pm_estimation.yaml  pr_review.yaml  release_notes_generation.yaml  requirements_analysis.yaml  security_scan.yaml  test_generation.yaml  vulnerability_radar.yaml
src/database-agent/: pyproject.toml
src/devops-agent/: pyproject.toml
src/docs-agent/: pyproject.toml
src/fleet-upgrade-agent/: pyproject.toml
src/frontend-specialist-agent/: pyproject.toml
src/guardrails-engine/: Dockerfile  pyproject.toml
src/health-monitor-agent/: pyproject.toml
src/hook-engine/: Dockerfile  pyproject.toml
src/infrastructure/: package.json  tsconfig.json
src/integration-test-agent/: pyproject.toml
src/mcp-servers/: Dockerfile  pyproject.toml
src/mcp-servers/ado-mcp/: main.py
src/mcp-servers/ado-mcp/k8s/: deployment.yaml
src/mcp-servers/checkmarx-mcp/: main.py
src/mcp-servers/checkmarx-mcp/k8s/: deployment.yaml
src/mcp-servers/cli/: orbit_mcp.py
src/mcp-servers/confluence-mcp/: main.py
src/mcp-servers/drawio-mcp/: main.py
src/mcp-servers/drawio-mcp/k8s/: deployment.yaml
src/mcp-servers/gitlab-mcp/: main.py
src/mcp-servers/harbor-mcp/: main.py
src/mcp-servers/jira-mcp/: main.py
src/mcp-servers/k8s/: deployment.yaml
src/mcp-servers/keycloak-mcp/: main.py
src/mcp-servers/kubernetes-mcp/: main.py
src/mcp-servers/newman-mcp/: main.py
src/mcp-servers/newman-mcp/k8s/: deployment.yaml
src/mcp-servers/postgres-mcp/: main.py
src/mcp-servers/registry/: main.py
src/mcp-servers/shared/: auth.py  mcp_base.py
src/mcp-servers/sonarqube-mcp/: main.py
src/mcp-servers/sonarqube-mcp/k8s/: deployment.yaml
src/mcp-servers/vault-mcp/: main.py
src/orchestrator/: Dockerfile  pyproject.toml
src/orchestrator/app/: auth.py  config.py  graph.py  llm.py  llm_router.py  main.py  mcp_client.py  router.py  temporal_worker.py
src/orchestrator/k8s/: deployment.yaml
src/pipeline-ledger/: Dockerfile  pyproject.toml
src/pipeline-ledger/app/: auth.py  config.py  db.py  esdb_writer.py  main.py  models.py  projector.py  repository.py  router.py
src/pipeline-ledger/k8s/: deployment.yaml
src/pipeline-ledger/tests/: test_chain.py
src/pm-agent/: pyproject.toml
src/portal-api/: AdPorts.AiPortal.sln  Dockerfile
src/portal-ui/: Dockerfile  nx.json  package.json  tailwind.config.js  tsconfig.base.json
src/pr-review-agent/: pyproject.toml
src/pr-review-agent/app/: main.py
src/pr-review-agent/k8s/: deployment.yaml
src/pr-review-agent/tests/: test_graph.py
src/project-registry/: pyproject.toml
src/project-registry-agent/: Dockerfile  pyproject.toml
src/project-registry/app/: main.py
src/project-registry/k8s/: deployment.yaml
src/project-registry/tests/: test_registry.py
src/qa-agent/: pyproject.toml
tests/integration/: conftest.py  pyproject.toml  test_e2e_pipeline.py
(+333 files in other folders)
