[tool.poetry]
name = "mcp-servers"
version = "0.1.0"
description = "ORBIT MCP Server suite"
authors = ["AdPorts AI Platform Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
structlog = "^24.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
