[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = "ORBIT Orchestration Agent Core — LangGraph + Temporal.io + LiteLLM"
authors = ["AdPorts AI Platform Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
langgraph = "^0.2.28"
langchain-core = "^0.3.15"
temporalio = "^1.7.1"
litellm = "^1.50.3"
httpx = "^0.27.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
redis = { extras = ["asyncio"], version = "^5.1.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
structlog = "^24.4.0"
confluent-kafka = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
