[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/integration"]

[tool.poetry]
name = "orbit-integration-tests"
version = "1.0.0"
description = "ORBIT E2E Integration Tests"
authors = ["ORBIT Platform Team"]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27"
pytest = "^8.2"
pytest-asyncio = "^0.23"
